--- a/.htaccess
+++ b/.htaccess
@@ -5,16 +5,13 @@ RewriteEngine On
 RewriteCond %{SERVER_PORT} !^443$
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
-RewriteCond %{HTTP_HOST} ^www\.manikuria\.ru$ [NC]
-RewriteRule ^(.*)$ https://manikuria.ru/$1 [R=301,L]
-
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.*)$ $1.html
 
 RewriteCond %{REQUEST_URI} /index
 RewriteCond %{QUERY_STRING} ^\z
-RewriteRule ^(.*)$ https://manikuria.ru/? [R=301,L]
+RewriteRule ^(.*)$ http://manikuria.ru/? [R=301,L]
 
 
 ErrorDocument 404 /404.html
